<resources>
    <string name="app_name">EpiAndroid Login</string>
    <string name="title_activity_user_infos">Personnal Information</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="Login">Login</string>
    <string name="Password">Password</string>
    <string name="Connexion">Connexion</string>
    <string name="msg_connexion">Please login</string>

    <string name="tab_infouser">Global</string>
    <string name="tab_planning">Planning</string>
    <string name="tab_Grade">Grades</string>

    <string name="mail">Mail : </string>
    <string name="login">Login : </string>
    <string name="semester">Semester : </string>
    <string name="year">Year : </string>
    <string name="profil_picture">Profil Picture</string>
    <string name="promo">Promo : </string>
    <string name="activeLog">Log Time : </string>
    <string name="city">City : </string>
    <string name="title_activity_principal">principal</string>

    <string name="title_info_user">Personnal Information</string>
    <string name="title_planning">Planning</string>
    <string name="title_grades">Trombi</string>
    <string name="title_modules">All Modules</string>
    <string name="title_my_past_modules">My Current/Past Modules</string>
    <string name="modules">Modules</string>
    <string name="tagImage">Profil Picture</string>
    <string name="projectPres">5 Last Projects</string>
    <string name="modulePres">5 Last Notes</string>
    <string name="history">5 Last News</string>
    <string name="title_projects">Projects</string>
    <string name="my_project">My Project</string>
    <string name="all_project">All Project</string>
    <string name="my_projects">My Project</string>
    <string name="my_modules">My Modules</string>
    <string name="sB0">B0</string>
    <string name="sB1">B1</string>
    <string name="sB2">B2</string>
    <string name="sB3">B3</string>
    <string name="sB4">B4</string>
    <string name="sB5">B5</string>
    <string name="sCB6">B6</string>
    <string name="lol">API NON FONCTIONNELLE</string>
    <string name="header_profile">Picture View</string>
    <string name="moduleTitle">Module Title : </string>
    <string name="moduleCode">Module Code : </string>
    <string name="Title">Title : </string>
    <string name="nbStu">Nb Student : </string>
    <string name="type">Type : </string>
    <string name="room">Room : </string>
    <string name="from">From : </string>
    <string name="to">To : </string>
    <string name="token">Token : </string>
    <string name="validate">OK</string>
    <string name="module_valid">Ce modules est déja validé !</string>
    <string name="credits">Credits : </string>
    <string name="grade">Grade : </string>
    <string name="level">Level acces</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscrib">unsubscribe</string>

    <string-array name="locations">
        <item>FR/BDX</item>
        <item>FR/LIL</item>
        <item>FR/LYN</item>
        <item>FR/MAR</item>
        <item>FR/MPL</item>
        <item>FR/NCY</item>
        <item>FR/NAN</item>
        <item>FR/NCE</item>
        <item>FR/PAR</item>
        <item>FR/REN</item>
        <item>FR/STG</item>
        <item>FR/TLS</item>
    </string-array>

    <string-array name="years">
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
    </string-array>

</resources>
