<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_modules"
        android:id="@+id/textView"
        android:layout_marginTop="10dp"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="8" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sB0"
        android:id="@+id/CB0"
        android:checked="true"
        android:layout_column="0"
        android:layout_row="1" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sB1"
        android:id="@+id/CB1"
        android:checked="true"
        android:layout_column="1"
        android:layout_row="1" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sB2"
        android:id="@+id/CB2"
        android:checked="true"
        android:layout_row="1"
        android:layout_column="2" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sB3"
        android:id="@+id/CB3"
        android:checked="true"
        android:layout_row="1"
        android:layout_column="3"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sB4"
        android:id="@+id/CB4"
        android:checked="true"
        android:layout_row="1"
        android:layout_column="4" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sB5"
        android:id="@+id/CB5"
        android:checked="true"
        android:layout_row="1"
        android:layout_column="5" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sCB6"
        android:id="@+id/CB6"
        android:checked="true"
        android:layout_row="1"
        android:layout_column="6" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:id="@+id/allmodules"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="8">
    </ListView>

</GridLayout>