<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DeviceFragment" >

    <CalendarView
        android:id="@+id/calendar"
        android:layout_width="match_parent"
        android:layout_height="306dp"
        android:layout_columnSpan="6"
        android:layout_column="0">
    </CalendarView>


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sB1"
        android:id="@+id/CB1"
        android:layout_row="1"
        android:layout_column="0"
        android:checked="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sB2"
        android:id="@+id/CB2"
        android:layout_row="1"
        android:layout_column="1"
        android:checked="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sB3"
        android:id="@+id/CB3"
        android:layout_row="1"
        android:layout_column="2"
        android:checked="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sB4"
        android:id="@+id/CB4"
        android:layout_row="1"
        android:layout_column="3"
        android:checked="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sB5"
        android:id="@+id/CB5"
        android:layout_row="1"
        android:layout_column="4"
        android:checked="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sCB6"
        android:id="@+id/CB6"
        android:layout_row="1"
        android:layout_column="5"
        android:checked="true" />

    <ListView
        android:id="@+id/activity"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_columnSpan="7"
        android:layout_column="0"
        android:layout_row="2">
    </ListView>

</GridLayout>
