<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:id="@+id/dialogue">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/moduleCode"
        android:id="@+id/textView5"
        android:layout_row="1"
        android:layout_column="0"
        android:paddingRight="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/moduleCode"
        android:layout_row="1"
        android:layout_column="1"
        android:paddingLeft="5dp"
        android:layout_columnSpan="2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Title"
        android:id="@+id/textView8"
        android:layout_row="2"
        android:layout_column="0"
        android:paddingRight="5dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/Title"
        android:layout_row="2"
        android:layout_column="1"
        android:paddingLeft="5dp"
        android:layout_columnSpan="2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/nbStu"
        android:id="@+id/textView9"
        android:layout_row="3"
        android:layout_column="0"
        android:paddingRight="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/nbStudent"
        android:layout_row="3"
        android:layout_column="1"
        android:paddingLeft="5dp"
        android:layout_columnSpan="2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/type"
        android:id="@+id/textView11"
        android:layout_row="4"
        android:layout_column="0"
        android:paddingRight="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/type"
        android:layout_row="4"
        android:layout_column="1"
        android:paddingLeft="5dp"
        android:layout_columnSpan="2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/room"
        android:id="@+id/textView13"
        android:layout_row="5"
        android:layout_column="0"
        android:paddingRight="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/room"
        android:layout_row="5"
        android:layout_column="1"
        android:paddingLeft="5dp"
        android:layout_columnSpan="2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/from"
        android:id="@+id/textView15"
        android:layout_row="6"
        android:layout_column="0"
        android:paddingRight="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/from"
        android:layout_row="6"
        android:layout_column="1"
        android:paddingLeft="5dp"
        android:layout_columnSpan="2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/to"
        android:id="@+id/textView18"
        android:layout_row="7"
        android:layout_column="0"
        android:paddingRight="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/to"
        android:layout_row="7"
        android:layout_column="1"
        android:paddingLeft="5dp"
        android:layout_columnSpan="2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/token"
        android:id="@+id/token"
        android:layout_row="8"
        android:layout_column="0"
        android:paddingRight="5dp" />

    <EditText
        android:layout_width="93dp"
        android:layout_height="wrap_content"
        android:id="@+id/gettoken"
        android:layout_row="8"
        android:layout_column="1"
        android:paddingLeft="5dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/validate"
        android:id="@+id/validate"
        android:layout_row="8"
        android:layout_column="2" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subscribe"
        android:id="@+id/subscribe"
        android:layout_row="9"
        android:layout_column="0" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unsubscrib"
        android:id="@+id/unsubscribe"
        android:layout_row="9"
        android:layout_column="0" />
</GridLayout>
