<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Login"
    android:id="@+id/test">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginInput"
        android:layout_marginTop="134dp"
        android:hint="@string/Login"
        android:inputType="text"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/PassInput"
        android:hint="@string/Password"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_below="@+id/loginInput"
        android:layout_alignStart="@+id/loginInput"
        android:layout_alignEnd="@+id/loginInput" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Connexion"
        android:id="@+id/button"
        android:layout_marginTop="28dp"
        android:background="#0002ff"
        android:textColor="#ffeeee"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:layout_below="@+id/PassInput"
        android:layout_centerHorizontal="true"
        android:onClick="checkLogin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_connexion"
        android:id="@+id/textView"
        android:layout_marginTop="74dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#fde799"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" />
</RelativeLayout>
