<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:tag="tab0"
                android:text="@string/tab_infouser"
                android:background="@android:drawable/btn_star_big_on"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                />
            <TextView
                android:tag="tab1"
                android:text="@string/tab_planning"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                />
            <TextView
                android:tag="tab2"
                android:text="@string/tab_Grade"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                />
        </TabWidget>

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical" android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1"
                android:scrollbarAlwaysDrawVerticalTrack="true"
                android:id="@+id/gd">

                <com.android.volley.toolbox.NetworkImageView
                    android:id="@+id/imgAvatar"
                    android:layout_width="100dp"
                    android:layout_height="115dp"
                    android:scaleType="centerCrop"
                    android:layout_row="1"
                    android:layout_rowSpan="4"
                    android:contentDescription="@string/profil_picture" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/title"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_columnSpan="3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/login"
                    android:id="@+id/textView2"
                    android:layout_row="1"
                    android:layout_column="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/login"
                    android:layout_row="1"
                    android:layout_column="2"
                    android:paddingRight="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/mail"
                    android:id="@+id/textView3"
                    android:layout_row="2"
                    android:layout_column="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/mail"
                    android:layout_row="2"
                    android:layout_column="2"
                    android:paddingRight="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/semester"
                    android:id="@+id/semester"
                    android:layout_row="3"
                    android:layout_column="1"
                    android:paddingRight="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/semestre"
                    android:layout_row="3"
                    android:layout_column="2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/year"
                    android:id="@+id/textView"
                    android:layout_row="4"
                    android:layout_column="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/year"
                    android:layout_row="4"
                    android:layout_column="2" />

            </GridLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/tabsLayout"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:padding="10dip"
                android:gravity="center"
                android:orientation="vertical"
                >
                <TextView android:id="@+id/tabsText1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dip"
                    android:text="tototototo1111" />
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/tabsLayout2"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:padding="10dip"
                android:gravity="center"
                android:orientation="vertical"
                >
                <TextView android:id="@+id/tabsText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dip"
                    android:text="tototototo2222" />
            </LinearLayout>

        </FrameLayout>
    </LinearLayout>
</TabHost>